...
              child: Column(
                crossAxisAlignment: CrossAxisAlignment.start,
                children: [
                  _buildLabel('ACCOUNT'),
                  _buildItem(icon: Icons.dashboard_rounded, title: 'Home',
                      onTap: () => Navigator.pushReplacementNamed(context, 'counselor-home')),
                  _buildItem(icon: Icons.person_rounded, title: 'Profile',
                      onTap: () { Navigator.pop(context); Navigator.pushNamed(context, '/counselor-profile'); }),
                  _buildLabel('STUDENTS'),
                  _buildItem(icon: Icons.people_rounded, title: 'My Students',
                      onTap: () { Navigator.pop(context); Navigator.pushNamed(context, '/student-history-list'); }),
                  _buildItem(icon: Icons.calendar_month_rounded, title: 'Appointments',
                      onTap: () { Navigator.pop(context); Navigator.pushNamed(context, '/all-appointments'); }),
...
